Framework under construction

--- a/src/main/resources/propertyFiles/Log4j.properties
+++ b/src/main/resources/propertyFiles/Log4j.properties
@@ -1,4 +1,5 @@
-log4j.rootLogger=INFO, file, stdout, HTML
+log4j.rootLogger=INFO, stdout, HTML 
+#,file
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
